--- a/src/app/tentativas/tentativas.component.html
+++ b/src/app/tentativas/tentativas.component.html
@@ -1,3 +1,1 @@
-<img [src]="" alt="" >
-<img [src]="" alt="" >
-<img [src]="" alt="" >
+<img *ngFor="let coracao of coracoes" [src]="coracao.exibeCoracao()" alt="" />
